[package]
name = "guess-the-number"
version = "0.1.0"
edition = "2024"
description = "CLI-игра 'Угадай число' с поддержкой уровней сложности"
license = "MIT"
authors = ["Devstrk <devstrk@yandex.ru>"]
repository = "https://github.com/devstrk/guess-the-number"
keywords = ["cli", "game", "guess-number"]
categories = ["command-line-utilities", "games"]
readme = "README.md"

[dependencies]
colored = "3.0.0"
const_format = "0.2.34"
rand = "0.9.0"
